--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "bootstrap/dist/js/bootstrap": ["./node_modules/types/bootstrap"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
